# autopiper

./: .gitignore  CMakeLists.txt  README.md  project.clj
doc/: introduction.md  macro_sketches.ap
docker/: run.sh
docker/buildbase/: Dockerfile  build.sh
src/: CMakeLists.txt  build-config.h.in  cmdline-driver.cc  compiler.cc  compiler.h  domtree.h  gen-printer.cc  gen-printer.h  gen-verilog.cc  gen-verilog.h  ir-crosslinker.cc  ir-parser.cc  ir-typechecker.cc  ir.cc  ir.h  lower.cc  main.cc  pipe-timing.cc  pipe-timing.h  pipe.cc  pipe.h  predicate.h  rpo.h  util.h
src/backend/: CMakeLists.txt  cmdline-driver.cc  cmdline-driver.h  compiler.cc  compiler.h  domtree.h  gen-printer.cc  gen-verilog.cc  gen-verilog.h  ir-build.h  ir-crosslinker.cc  ir-parser.cc  ir-typechecker.cc  ir.cc  ir.h  lower.cc  main.cc  pipe-timing.cc  pipe-timing.h  pipe.cc  pipe.h  predicate.h  rpo.h  timing-dag.h
src/common/: error-collector.h  exception.h  parse-args.cc  parse-args.h  parser-utils.h
src/frontend/: CMakeLists.txt  TODO  agg-types.cc  agg-types.h  ast-link.h  ast.cc  ast.h  autopiper  cmdline-driver.cc  cmdline-driver.h  codegen.cc  codegen.h  compiler.cc  compiler.h  compiler.lua  func-inline.cc  func-inline.h  macro.cc  macro.h  main.cc  main.clj  parser-expr.h  parser.cc  parser.h  project.clj  project.clj.in  test.ap  test_simple.ap  test_straightline.ap  test_timing.ap  type-infer.cc  type-infer.h  type-lower.cc  type-lower.h  type.cc  type.h  var-scope.cc  var-scope.h  visitor.cc  visitor.h
src/frontend/fe/: compiler.clj  main.clj
tests/: test0.ir  test1.ir  test10.ir  test2_simple.ir  test_multi.ir
tests/backend/: test3.ir  test4.ir  test5.ir  test6.ir  test7.ir  test7_simple.ir  test8.ir  test9.ir  test_simple_pipe.ir
tests/behavior/: array_test.ap  basic_test.ap  bypass_test.ap  func_test.ap  multiple_writers.ap  multiple_writers_with_kills.ap  onkillyounger_test.ap  stall_test.ap  test.py  test.sh
tests/frontend/: test.ap  test_aggregates_typedefs.ap  test_anonfunc.ap  test_arrays.ap  test_casts.ap  test_kills.ap  test_macros.ap  test_macros.sh  test_macros_golden.ap  test_pragmas.ap  test_regs.ap  test_simple.ap  test_stmtblock.ap  test_straightline.ap
